# slang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README2.md
data/: a.lang
src/: getopt.c  getopt.h  hash_table.c  hash_table.h  lex.yy.c  main.c  murmur_hash_3.c  murmur_hash_3.h  os_calls.h  slang.c  slang.h  slang.l  slang.tab.c  slang.tab.h  slang.y  snazzle.l  snazzle.tab.c  snazzle.tab.h  snazzle.y  sym_table.c  sym_table.cpp  sym_table.h  win_calls.c  win_calls.cpp
src/backends/glsl/: glsl_entry.cpp
src/backends/hlsl/: hlsl_entry.cpp
tests/: first.hlsl  first_prog.slang  fxc_compile_all.bat  render_target_2.pp.hlsl  render_target_2.pp_stripped.hlsl  var_types.hlsl
tests/errors/: 01.slang  01.slang.pp
tests/include/: test_view_include.slang
